--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-printpdf = "0.7.0"
+image = { version = "0.24", default-features = false, features = ["png"] }
+printpdf = { version = "0.7", features = ["embedded_images"] }
