--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ab_glyph = "0.2.29"
 image = { version = "0.24", default-features = false, features = ["png"] }
 printpdf = { version = "0.7", features = ["embedded_images"] }
-rusttype = "0.9.3"
