--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 ab_glyph = "0.2.29"
+clap = { version = "4.5.31", features = ["derive"] }
 image = { version = "0.24", default-features = false, features = ["png"] }
 printpdf = { version = "0.7", features = ["embedded_images"] }
 
