feat: Add JSON Schema

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2024"
 ab_glyph = "0.2.29"
 clap = { version = "4.5.31", features = ["derive"] }
 image = { version = "0.24", default-features = false, features = ["png"] }
+jsonschema = "0.29.0"
 printpdf = { version = "0.7", features = ["embedded_images"] }
+serde_json = "1.0.139"
 
 [profile.release]
 opt-level = "s"       # サイズと速度のバランスを取る最適化
